fix: project card grid spacing

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ table {
     grid-area: 2/1/5/2;
 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 45%));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     grid-auto-rows: 220px;
     gap:10px;
     justify-content: space-between;
